--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </style>
     <body>
         <script src="js/three.js"></script>
+        <script src="js/OrbitControls.js"></script>
         <script src="main.js"></script>
     </body>
     </head>
